--- a/example/views/createInvoice.ejs
+++ b/example/views/createInvoice.ejs
@@ -29,7 +29,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Operations <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/start">Create An Invoice</a></li>
-                <li><a href="#">Another action</a></li>
+                <li><a href="/CreateItemForm">Create An Item</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
