--- a/example/views/customer.ejs
+++ b/example/views/customer.ejs
@@ -32,7 +32,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Operations <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/start">Create An Invoice</a></li>
-                <li><a href="#">Another action</a></li>
+                <li><a href="/CreateItemForm">Create An Item</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
@@ -118,7 +118,7 @@
         </table>
         <div class="submit-name">
             Quantity <input type="text" name="InvoiceQty" /> <br>
-            <button class="btn btn-lg btn-primary pull-right" type="submit" value="Make an invoice">Create an Invoice</button>
+            <button class="btn btn-lg btn-primary pull-right" type="submit" value="Make an invoice" disable>Create an Invoice</button>
         </div>
       </form>   
       <br>
