--- a/example/views/errorPage.ejs
+++ b/example/views/errorPage.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title><!---CDN Links-->
+  <title></title>
+  <!---CDN Links-->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -45,20 +46,10 @@
     </nav>
   <div class="jumbotron">
     <div class="container">
-    <h1>Created new item <%= item.FullyQualifiedName %></h1>
-        <p>This sample app is meant as a starting point and example for your NodeJS QuickBooks Online integrations.</p>
+    <h1><%= errorMessage.Message %></h1>
+        <p>This sample app is meant as a starting point and example for your NodeJS QuickBooks Online integrations. <br> <%= errorMessage.Detail %></p>
     </div>    
   </div>
-  <div class="container">
-    <p>Id: <%= item.Id %> <br>
-      IncomeAccountRef: <br> name: <%= item.IncomeAccountRef.name %> <br> value: <%= item.IncomeAccountRef.value %> <br>
-      Level: <%= item.level %> <br>
-      CreateTime: <%= item.MetaData.CreateTime %> <br>
-      PurchaseCost:  <%= item.PurchaseCost %> <br>
-      Type: <%= item.Type %> <br>
-      UnitPrice: <%= item.UnitPrice %> <br>
-      Quantity: <%= item.QtyOnHand %> <br>
-    </p>
-  </div>
+
 </body>
 </html>
