removed searchresults.ejs

--- a/application/views/createItemForm.ejs
+++ b/application/views/createItemForm.ejs
@@ -33,11 +33,6 @@
               <ul class="dropdown-menu">
                 <li><a href="/start">Create An Invoice</a></li>
                 <li><a href="/CreateItemForm">Create An Item</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
               </ul>
             </li>
           </ul>
@@ -46,7 +41,7 @@
     </nav>
   <div class="jumbotron">
     <div class="container">
-    <h1>Choose a customer and an item to create an invoice</h1>
+    <h1>Create Item Form</h1>
         <p>This sample app is meant as a starting point and example for your NodeJS QuickBooks Online integrations.</p>
     </div>    
   </div>
