--- a/application/views/createInvoice.ejs
+++ b/application/views/createInvoice.ejs
@@ -1,41 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!---CDN Links-->
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
-</head>
+<% include /partials/head %>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">QuickBooks Online NodeJS Sample App</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Operations <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/start">Create An Invoice</a></li>
-                <li><a href="/CreateItemForm">Create An Item</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+<% include /partials/nav %>
   <div class="jumbotron">
     <div class="container">
     <h1>Success! An Invoice has been created</h1>
@@ -51,9 +18,36 @@
     </div>    
   </div>
   <div class='container'>
+    <table class="table">
+      <thead>
+        <tr>
+          <td>Invoice Id</td>
+          <td>Doc Number</td>
+          <td>Transaction Date</td>
+          <td>Total Amount</td>
+          <td>Due Date</td>
+        </tr>
+      </thead>
+      <tr>
+        <td><%= Invoice.Id %></td>
+        <td><%= Invoice.DocNumber %></td>
+        <td><%= Invoice.TxnDate %></td>
+        <td>$<%= Invoice.TotalAmt %></td>
+        <td><%= Invoice.DueDate %></td>
+      </tr>
+    </table>
     <p>Inventory count of <%= ItemBeforeInvoice.QtyOnHand %> for Item "<%= Item.Name %>" before invoice id <%= Invoice.Id %></p>
     <p>The quantity on the invoice is <%= Invoice.Line[0].SalesItemLineDetail.Qty %></p>
     <p>The inventory count post Invoice is <%= Item.QtyOnHand %></p>
+    <div class="row">
+      <form method="GET" action="/createPayment">
+        <input type="hidden" name="InvoiceId" value= "<%= Invoice.Id %>" >
+        <input type="hidden" name="CustomerRef" value= "<%= Invoice.CustomerRef.value %>" >
+        <input type="hidden" name="TotalAmt" value= "<%= Invoice.TotalAmt %>" >
+        <input type="hidden" name="LineAmt" value= "<%= Invoice.Line[0].Amount %>" >
+        <button class="btn btn-lg btn-primary pull-right" type="submit" value="payment">Pay Invoice </button>
+      </form>
+    </div>
   </div>
 </body>
 </html>
