--- a/application/views/findItem.ejs
+++ b/application/views/findItem.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
+<% include /partials/head %>
 <body>
+<% include /partials/nav %>
   <h1>Found <%= searchResults.QueryResponse.maxResults %> items matching <%= searchTerm %> </h1>
   <ul>
   <% items.forEach((item) => { %>
